<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_gradient_white_blue"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:id="@+id/ivLoginLogoApp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200"
        android:layout_marginTop="@dimen/dimen_60"
        android:src="@drawable/ic_logo_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginPhoneNumber"
        style="@style/StyleBlue1Text16SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_60"
        android:text="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@id/ivLoginLogoApp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtLoginPhoneNumber"
        style="@style/StyleDividerLightText16Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32"
        android:background="@drawable/shape_white_bg_stroke_blue_9_corner_24"
        android:drawableStart="@drawable/ic_phone_call"
        android:drawablePadding="@dimen/dimen_12"
        android:hint="@string/enter_phone_number"
        android:paddingVertical="@dimen/dimen_12"
        android:paddingStart="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/tvLoginPhoneNumber" />

    <TextView
        android:id="@+id/tvLoginPassword"
        style="@style/StyleBlue1Text16SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/edtLoginPhoneNumber" />

    <EditText
        android:id="@+id/edtLoginPassword"
        style="@style/StyleDividerLightText16Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_32"
        android:background="@drawable/shape_white_bg_stroke_blue_9_corner_24"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_eye_show"
        android:drawablePadding="@dimen/dimen_12"
        android:hint="@string/enter_pw"
        android:paddingVertical="@dimen/dimen_12"
        android:paddingStart="@dimen/dimen_16"
        android:paddingEnd="@dimen/dimen_12"
        app:layout_constraintTop_toBottomOf="@id/tvLoginPassword"
        app:passwordToggleEnabled="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
