<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/dimen_8"
    app:cardCornerRadius="@dimen/dimen_12"
    app:cardElevation="@dimen/dimen_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivClinic"
                android:layout_width="@dimen/dimen_92"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_clinic_1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_8"
                android:orientation="vertical"
                android:paddingTop="@dimen/dimen_6">

                <TextView
                    android:id="@+id/tvClinicName"
                    style="@style/StyleGreenText16SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Phòng khám sản phụ khoa 43 Nguyễn Khang" />

                <TextView
                    android:id="@+id/tvClinicAddress"
                    style="@style/StyleGreenLight14Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="@dimen/dimen_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvClinicName"
                    tools:text="43 Nguyễn Khang, Trung Hòa, Cầu giấy, Hà Nội" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.thomnt.medi365.widget.MissionView
                        android:id="@+id/mvClinicBooking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:mv_background="@drawable/shape_rectangle_white_bg_color_booking_stroke_corner_12"
                        app:mv_icon="@drawable/ic_booking"
                        app:mv_show_text="true"
                        app:mv_text="@string/booking"
                        app:mv_text_color="@color/color_btn_booking" />

                    <com.thomnt.medi365.widget.MissionView
                        android:id="@+id/mvClinicAdvise"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_6"
                        android:layout_weight="1"
                        app:mv_background="@drawable/shape_rectangle_white_bg_color_advise_stroke_corner_12"
                        app:mv_icon="@drawable/ic_advise"
                        app:mv_show_text="false"
                        app:mv_text="@string/advise"
                        app:mv_text_color="@color/color_btn_advise" />

                    <com.thomnt.medi365.widget.MissionView
                        android:id="@+id/mvClinicPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_6"
                        android:layout_weight="1"
                        app:mv_background="@drawable/shape_rectangle_white_bg_color_phone_stroke_corner_12"
                        app:mv_icon="@drawable/ic_phone"
                        app:mv_show_text="false"
                        app:mv_text="@string/phone"
                        app:mv_text_color="@color/color_btn_phone" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
